--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@lark-base-open/js-sdk": "0.3.0-alpha",
+    "@lark-base-open/js-sdk": "0.3.8",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
     "i18next": "^23.2.3",
